# ace

./: .gitignore  ace.nix  ace.opam  ace.opam.locked  clap.nix  config.yaml  default.nix  dev.nix  dream-httpaf.nix  dream-pure.nix  dream.nix  dune-project  multipart_form-lwt.nix  multipart_form.nix
_src/: Cli.re
_src/ace_ext/: Ext.re
_src/ace_ext/Slack/Blocks/: Blocks.re  Jsx.re
_src/ace_ext/dotenv/: Dotenv.re  dune_
_src/ace_ext/interpol/: dune_
_src/ace_lib/: ConfigParser.re  Processor.re
_src/ace_lib/Widgets/: Widgets.rei
_src/ace_shell/: Interface.re
esy.lock/: index.json
lib/: Ace.re  Message.re  Message.rei  Processor.re  Runner.re  Types.re  Widget.re  dune
src/: dune  dune_
src/ace_ext/: Ext.re  dune  dune_
src/ace_ext/Ministel/: Ministel.re  dune
src/ace_ext/Minitel/: Minitel.re  dune
src/ace_ext/Slack/: dune
src/ace_ext/Slack/Blocks/: Utils.re
src/ace_ext/interpol/: Interpol.re
src/ace_lib/: ConfigParser.re  HTTPResponse.re  Internal.re  Processor.re  Types.re  Utils.re  dune
src/ace_lib/Renderers/: Renderers.re  Renderers.rei  SlackRenderer.re
src/ace_lib/Widgets/: CommandResultWidget.re  SimpleTextWidget.re  Widgets.re  Widgets.rei
src/ace_shell/: Interface.re  Shell.re
src/ace_web/: Server.re
test/: dune  test1.re  test2.re  test_message.re  test_processor.re  test_runner.re  test_widget.re
